# viberust

./: Cargo.toml  README.md
src/: config.rs  loader.rs  main.rs  tokenizer.rs
src/model/: attention.rs  embedding.rs  feedforward.rs  mod.rs  normalization.rs  transformer.rs
src/server/: handlers.rs  mod.rs  types.rs
